chore: Update nginx.conf to serve static files from correct root directory

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,6 +47,7 @@ server {
 
     # Serve static files with long cache times
     location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|svg|woff|woff2|ttf|eot)$ {
+        root /usr/share/nginx/html;
         expires 30d;
         add_header Cache-Control "public";
         access_log off;
